--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,9 @@
+2003-08-22  Andreas Jaeger  <aj@suse.de>
+
+	* Make-lang.in (f95.install-common): Add DESTDIR support.
+	* (f95.install-info): Likewise.
+	(f95.uninstall): Likewise.
+
 2003-08-19  Diego Novillo  <dnovillo@redhat.com>
 
 	* trans-types.c (gfc_init_types): Initialize
