--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-22  Kejia Zhao  <kejia_zh@yahoo.com.cn>
+
+	* trans-instinsic.c (gfc_conv_intrinsic_mod): Also do MODULO.
+	(gfc_conv_intrinsic_function): Add MODULO.
+
 2003-08-22  Jason Merrill  <jason@redhat.com>
 
 	* trans-array.c (gfc_conv_expr_descriptor): Update use of predicates.
