--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-27  Jason Merrill  <jason@redhat.com>
+
+	* real.c (do_multiply): Initialize with memset.
+
 2003-08-20  Jason Merrill  <jason@redhat.com>
 
 	* tree.h (IS_EXPR_CODE_CLASS): Also include 'r' and 's'.
