--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-08-27  Per Bothner  <pbothner@apple.com>
+
+	* cpperror.c (print_location):  Don't check for !pfile->buffer.  That
+	test fails following my 08-21 change, and it seems unnecessary anyway.
+	(cpp_error):  Likewise.
+
 2003-08-21  Per Bothner  <pbothner@apple.com>
 
 	* c-opts.c (init_c_common_once):  Do finish_options now,
