--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,21 @@
+2003-08-15  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-decl.c (pushdecl): Only put decls which finish_struct will do
+	something about onto incomplete chain.
+	(finish_struct): If not removing type from incomplete
+	list, update prev.
+
+2002-05-31  Stan Shebs  <shebs@apple.com>
+	    Turly O'Connor  <turly@apple.com>
+
+	* c-decl.c (struct binding_level): Change int field n_incomplete
+	to tree list incomplete_list.
+	(clear_binding_level): Init field with NULL.
+	(pushdecl): Add incomplete type to list.
+	(mark_binding_level): Mark the incomplete list.
+	(finish_struct): Scan the incomplete list for types instead
+	of all decls in the current binding level.
+
 2003-01-23  Mike Stump  <mrs@apple.com>
 
 	* regclass.c (init_reg_autoinc): New function.
