builtins.c (expand_builtin_expect_jump): Save pending_stack_adjust and restore it if returning NULL.
	* builtins.c (expand_builtin_expect_jump): Save pending_stack_adjust
	and restore it if returning NULL.

	* gcc.dg/20030826-2.c: New test.

From-SVN: r70909

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-26  Jakub Jelinek  <jakub@redhat.com>
+
+	* builtins.c (expand_builtin_expect_jump): Save pending_stack_adjust
+	and restore it if returning NULL.
+
 2003-08-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* c-decl.c (pushdecl): Only put decls which finish_struct will do
