--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-26  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20030826-2.c: New test.
+
 2003-08-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20030815-1.c: New test.
