--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-08-21  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/i386/i386.c (override_options): Turn on MASK_SSE for
+	-msse2.
+
+	* config/i386/i386.h (TARGET_SSE): Remove MASK_SSE2.
+
 2002-09-23  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/i386.h (MASK_ACCUMULATE_OUTGOING_ARGS_SET, MASK_MMX_SET,
