--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -104,6 +104,10 @@
    (UNSPEC_PFRCPIT2             52)
    (UNSPEC_PFRSQRT              53)
    (UNSPEC_PFRSQIT1             54)
+
+   ; For PNI support:
+   (UNSPEC_MONITOR		55)
+   (UNSPEC_MWAIT		56)
   ])
 
 ;; Insns whose names begin with "x86_" are emitted by gen_FOO calls
@@ -20080,3 +20084,22 @@
     return "prefetchw\t%a0";
 }
   [(set_attr "type" "mmx")])
+
+;; PNI
+
+(define_insn "mwait"
+  [(unspec_volatile [(match_operand:SI 0 "register_operand" "a")
+		     (match_operand:SI 1 "register_operand" "c")]
+		    UNSPEC_MWAIT)]
+  "TARGET_PNI"
+  "mwait\t%0, %1"
+  [(set_attr "length" "3")])
+
+(define_insn "monitor"
+  [(unspec_volatile [(match_operand:SI 0 "register_operand" "a")
+		     (match_operand:SI 1 "register_operand" "c")
+		     (match_operand:SI 2 "register_operand" "d")]
+		    UNSPEC_MONITOR)]
+  "TARGET_PNI"
+  "monitor\t%0, %1, %2"
+  [(set_attr "length" "3")])
