--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-08-29  Richard Henderson  <rth@redhat.com>
+
+        * c-tree.h (C_DECL_FILE_SCOPE): Move ...
+        * tree.h (DECL_FILE_SCOPE_P): ... here, and rename.
+        * c-decl.c, c-objc-common.c, c-typeck.c: Update to match.
+
 2003-08-27  Jason Merrill  <jason@redhat.com>
 
 	* real.c (do_multiply): Initialize with memset.
