f95-lang.c (gfc_init_builtin_functions): C arrays start at index zero!
        * f95-lang.c (gfc_init_builtin_functions): C arrays start at
        index zero!

From-SVN: r71025

--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-03  Jeff Law  <law@redhat.com>
+
+	* f95-lang.c (gfc_init_builtin_functions): C arrays start at
+	index zero!
+
 2003-08-30  Paul Brook  <paul@nowt.org>
 
 	* f95-lang.c (builtin_function): Remove #if 0 code.
