--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2003-08-30  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* MAINTAINERS: Update my e-mail address.
+
+2003-08-20  Bernardo Innocenti  <bernie@develer.com>
+
+	* MAINTAINERS (Write After Approval): Add myself.
+
+2003-08-15  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* MAINTAINERS (Write After Approval): Add myself.
+
 2003-08-08  Kean Johnston  <jkj@sco.com>
 
 	* configure.in (sco3.2v5*): Enable building of libgcj
