builtins.c (expand_builtin_expect_jump): Save pending_stack_adjust and restore it if returning NULL.
	* builtins.c (expand_builtin_expect_jump): Save pending_stack_adjust
	and restore it if returning NULL.

	* gcc.dg/20030826-2.c: New test.

From-SVN: r71064

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-27  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20030826-2.c: New test.
+
 2003-09-03  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/12053
