--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-27  Jakub Jelinek  <jakub@redhat.com>
+
+	* builtins.c (expand_builtin_expect_jump): Save pending_stack_adjust
+	and restore it if returning NULL.
+
 2003-09-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/ia64/libgcc-ia64.ver: Export _Unwind_GetBSP@@GCC_3.3.2.
