--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-06  Josef Zlomek  <zlomekj@suse.cz>
+
+	* fibheap.c (fibheap_replace_key_data): Change type of OKEY to
+	FIBHEAPKEY_T.
+
 2003-08-04  Release Manager
 
 	* GCC 3.3.1 Released.
