--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-07  Kejia Zhao  <kejia_zh@yahoo.com.cn>
+
+	* gfortran.fortran-torture/execute/intrinsic_aint_anint.f90: New test.
+
 2003-08-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR C++/11512
