* io.c (gfc_resolve_dt): Error if format label is not defined.
From-SVN: r71173

--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-07  Paul Brook  <paul@nowt.org>
+
+	* io.c (gfc_resolve_dt): Error if format label is not defined.
+
 2003-09-07  Kejia Zhao  <kejia_zh@yahoo.com.cn>
 
 	* trans-intrinsic.c (gfc_conv_intrinsic_aint): Fix two bugs. One is 
