--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20030904-1.c: New test.
+
 2003-08-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20030826-2.c: New test.
