write.c (write_float): Dectection of positive infinite number...
	* io/write.c (write_float): Dectection of positive infinite number,
	Not a Number(NaN) and negative infinite number.
	(ioutput_float): Bug fix for FMT_E and FMT_D processing to
	output a very_very small number ( < 0.1e-100 ).

From-SVN: r71239

--- a/libgfortran/ChangeLog
+++ b/libgfortran/ChangeLog
@@ -1,3 +1,10 @@
+2003-09-09  XiaoQiang Zhang  <zhangapache@yahoo.com>
+
+	* io/write.c (write_float): Dectection of positive infinite number,
+	Not a Number(NaN) and negative infinite number.
+	(ioutput_float): Bug fix for FMT_E and FMT_D processing to
+	output a very_very small number ( < 0.1e-100 ).
+
 2003-09-07  XiaoQiang Zhang (zhangapache@yahoo.com>
 
 	* libgfortran.h (xtoa, itoa): Parameter modified.
